--- a/film-network-ui/src/app/modules/film/components/menu/menu.component.html
+++ b/film-network-ui/src/app/modules/film/components/menu/menu.component.html
@@ -20,17 +20,17 @@
           </a>
         </li>
         <li class="nav-item me-3">
-          <a class="nav-link" aria-current="page" routerLink="/my-waiting-list">
-            <i class="fas fa-heart"></i> My Waiting List
+          <a class="nav-link" aria-current="page" routerLink="/films/my-wishlist">
+            <i class="fas fa-heart"></i> My Wish List
           </a>
         </li>
         <li class="nav-item me-3">
-          <a class="nav-link" aria-current="page" routerLink="/returned-films">
+          <a class="nav-link" aria-current="page" routerLink="/films/returned-films">
             <i class="fas fa-undo-alt"></i> Returned Films
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link " aria-current="page" routerLink="/borrowed-films">
+          <a class="nav-link " aria-current="page" routerLink="/films/borrowed-films">
             <i class="fas fa-share-square"></i> Borrowed Films
           </a>
         </li>
