--- a/film-network-ui/src/app/modules/film/pages/my-films/my-films.component.html
+++ b/film-network-ui/src/app/modules/film/pages/my-films/my-films.component.html
@@ -10,16 +10,20 @@
   <!-- Film Cards Display -->
   <div class="d-flex justify-content-start gap-2 flex-wrap">
     <app-film-card
-      [film]="film"
       *ngFor="let film of filmResponse.content"
+      [film]="film"
       [manage]="true"
       (edit)="onEditFilm($event)"
+      (details)="onShowFilmDetails($event)"
       (archive)="onDeleteFilm($event)">
     </app-film-card>
   </div>
 
+  <div *ngIf="filmResponse.content?.length ===0" class="text-center fw-bold" >
+        <i class="fa fa-exclamation-triangle"  aria-hidden="true"> </i>&nbsp; No film found
+    </div>
   <!-- Pagination Section -->
-  <div class="d-flex justify-content-center gap-2 mt-3">
+  <div class="d-flex justify-content-center gap-2 mt-3" *ngIf="filmResponse.content?.length !==0">
     <nav aria-label="Page navigation example">
       <ul class="pagination justify-content-center p-3">
         <li class="page-item" [ngClass]="{'disabled': filmResponse.first}">
@@ -52,12 +56,20 @@
   </div>
 </div>
 
-<!-- Add Film Modal (displayed when showAddFilmModal is true) -->
+<!-- Add/Edit Film Modal -->
 <app-add-film-modal
   *ngIf="showAddFilmModal"
+  [filmToEdit]="editingFilm"
   (closeModal)="onModalClose()"
   (submitFilm)="onFilmSubmit($event)">
 </app-add-film-modal>
+
+
+<app-film-info-modal
+  *ngIf="showViewFilmModal"
+  [film]="selectedFilm"
+  (closeModal)="onViewFilmModalClose()">
+</app-film-info-modal>
 
 <!-- Snackbar for displaying messages -->
 <app-snackbar [message]="message" [level]="level" *ngIf="message"></app-snackbar>
