--- a/film-network-ui/src/app/modules/film/pages/borrowed-films/borrowed-films.component.html
+++ b/film-network-ui/src/app/modules/film/pages/borrowed-films/borrowed-films.component.html
@@ -16,7 +16,7 @@
           <th scope="col">Title</th>
           <th scope="col">IMDBID</th>
           <th scope="col">Director</th>
-<!--          <th scope="col">Year</th>-->
+          <th scope="col">Rent Date</th>
           <th scope="col">Actions</th>
         </tr>
       </thead>
@@ -29,7 +29,7 @@
           <td>{{ film.filmTitle }}</td>
           <td>{{ film.imdbId }}</td>
           <td>{{ film.director }}</td>
-<!--          <td>{{ film.year }}</td>-->
+<td>{{film.rentalDate}}</td>
           <td>
             <!-- Return button with an icon -->
             <div class="d-flex gap-2 justify-content-center align-items-center" >
