--- a/film-network-ui/src/app/modules/film/components/menu/menu.component.html
+++ b/film-network-ui/src/app/modules/film/components/menu/menu.component.html
@@ -43,7 +43,7 @@
           <i class="fas fa-search "></i>
         </button>
         <span class="text-dark-emphasis" >Welcome,</span>
-        <span class="text-capitalize fw-bold text-dark-emphasis">John</span>
+        <span class="text-capitalize fw-bold text-dark-emphasis">{{getUserInfo()}}</span>
         <button class="btn btn-link text-danger" type="button" (click)="logout()" title="Logout">
           <i class="fas fa-sign-out-alt"  ></i>
         </button>
