Add Search functionality

--- a/film-network-ui/src/app/modules/film/components/film-info-modal/film-info-modal.component.html
+++ b/film-network-ui/src/app/modules/film/components/film-info-modal/film-info-modal.component.html
@@ -35,13 +35,13 @@
     </div>
 
     <!-- Scrollable Feedback Section -->
-    <div class="feedback-section mt-3 overflow-auto" style="max-height: 300px; border-top: 1px solid #ccc; padding: 10px;">
+    <div class="feedback-section mt-3 overflow-auto pb-1" style="max-height: 180px; border-top: 1px solid #ccc; padding: 10px;">
       <!-- Include the FeedbackComponent -->
       <app-feedbacks [film]="film!"></app-feedbacks>
     </div>
 
     <!-- Modal Footer: Close Button -->
-    <div class="modal-footer">
+    <div class="modal-footer pt-2">
       <button type="button" class="btn btn-primary" (click)="onClose()">Close</button>
     </div>
   </div>
