--- a/film-network-ui/src/app/modules/film/components/film-info-modal/film-info-modal.component.scss
+++ b/film-network-ui/src/app/modules/film/components/film-info-modal/film-info-modal.component.scss
@@ -7,6 +7,7 @@
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 1050;
+
 }
 
 /* Modal dialog centering and sizing */
@@ -16,6 +17,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 1060;
+  max-height: 90vh; /* Fixed height relative to viewport */
   width: 90%;
   max-width: 800px;
 }
@@ -26,6 +28,7 @@
   border: none;
   border-radius: 0.5rem;
   overflow: hidden;
+  max-height: 40%;
 }
 
 /* Poster and info section styling */
@@ -40,7 +43,7 @@
 
 /* Ensure images do not overflow their container */
 .poster-section img {
-  max-width: 100%;
-  height: auto;
-  object-fit: cover;
+  width: 350px;
+  height: 400px;
+  //object-fit: cover;
 }
